# bacchus_active_perception

./: .gitignore  CMakeLists.txt  frames.gv  package.xml
config/: config.rviz  config.yml
include/active_perception/: active_perception_controller.h  detector.h
launch/: run.launch  viz.launch
src/: active_perception_controller.cpp  detector.cpp  main.cpp
