<?xml version="1.0"?>
<package format="2">
  <name>active_perception</name>
  <version>0.0.0</version>
  <description>The active_perception package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="thprapav@gmail.com">cdust</maintainer>


  <license>MIT</license>ur5_sync_msgs

  <build_depend>autharl_core</build_depend>
  <build_depend>bacchus_robot</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
 <depend> pcl_conversions</depend>
  

  <exec_depend>autharl_core</exec_depend>
  <exec_depend>bacchus_robot</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <depend>std_msgs</depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
